[#13] Initial GetKeyword and GetKeywords Endpoints
