# openapi-v3.1.0.yml
@@ -45,6 +45,23 @@ components:
           type: array
           uniqueItems: false
       type: object
+    web-scraper_dev_internal_model.KeywordDTO:
+      properties:
+        adCount:
+          type: integer
+        errorMessage:
+          type: string
+        htmlContent:
+          type: string
+        id:
+          type: integer
+        keyword:
+          type: string
+        linkCount:
+          type: integer
+        status:
+          type: string
+      type: object
 externalDocs:
   description: ""
   url: ""
@@ -60,6 +77,87 @@ info:
   version: "1.0"
 openapi: 3.1.0
 paths:
+  /keywords:
+    get:
+      description: Get the list of keywords uploaded by current user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/web-scraper_dev_internal_model.KeywordDTO'
+                type: array
+          description: OK
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_api_errors.Error'
+          description: Unauthorized
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_api_errors.Error'
+          description: Internal Server Error
+      security:
+      - BearerToken: []
+      summary: Get the list of keywords
+      tags:
+      - keywords
+  /keywords/{id}:
+    get:
+      description: Get the result of a keyword uploaded by current user
+      parameters:
+      - description: Payment ID in uuid format
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_model.KeywordDTO'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_api_errors.Error'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_api_errors.Error'
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_api_errors.Error'
+          description: Internal Server Error
+      security:
+      - BearerToken: []
+      summary: Get the result of a keyword
+      tags:
+      - keywords
   /users/activate:
     post:
       description: |-
